# openmp_clion

./: 1_MPI.cpp  1_OMP.cpp  2_OMP.cpp  2f_MPI.cpp  3_MPI.cpp  3_OMP.cpp  4_MPI.cpp  4_OMP.cpp  5_MPI.cpp  5_OMP.cpp  6_OMP.cpp  7_OMP.cpp  8_OMP.cpp  9_OMP.cpp  CMakeLists.txt  run.sh
